Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18481

qmt_alloc_lock_array() can leak memory

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      if qmt_alloc_lock_array() returns with no locks found, then array->q_locks can be leaked

      Attachments

        Activity

          [LU-18481] qmt_alloc_lock_array() can leak memory
          pjones Peter Jones added a comment -

          Merged for 2.17

          pjones Peter Jones added a comment - Merged for 2.17

          "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/57107/
          Subject: LU-18481 quota: free array in qmt_alloc_lock_array
          Project: fs/lustre-release
          Branch: master
          Current Patch Set:
          Commit: df9adfd1ae2933c98d20e278c4c229eb38c16a3f

          gerrit Gerrit Updater added a comment - "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/57107/ Subject: LU-18481 quota: free array in qmt_alloc_lock_array Project: fs/lustre-release Branch: master Current Patch Set: Commit: df9adfd1ae2933c98d20e278c4c229eb38c16a3f

          "Alex Zhuravlev <bzzz@whamcloud.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/57107
          Subject: LU-18481 quota: free array in qmt_alloc_lock_array
          Project: fs/lustre-release
          Branch: master
          Current Patch Set: 1
          Commit: 00da9926440c086956b8d115b5800ef7af20a30c

          gerrit Gerrit Updater added a comment - "Alex Zhuravlev <bzzz@whamcloud.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/57107 Subject: LU-18481 quota: free array in qmt_alloc_lock_array Project: fs/lustre-release Branch: master Current Patch Set: 1 Commit: 00da9926440c086956b8d115b5800ef7af20a30c

          People

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: