LU-18481 quota: free array in qmt_alloc_lock_array

qmt_alloc_lock_array() may leak memory if no locks have been found.

Test-Parameter: testlist=sanity-quota
Test-Parameter: testlist=sanity-quota
Test-Parameter: testlist=sanity-quota

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I58e50bf30f7eae3dd4aed06879d74ed53d3b781a
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/57107
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sergey Cheremencev <scherementsev@ddn.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>